# zso1718_1

./: .gitignore  CMakeLists.txt  Makefile  README.rst  ZSO1718_1.cbp  alienos.h  debug.c  debug.h  display.c  display.h  emu.cbp  hello  hshare.cbp  main.c  start-qemu.sh
include/: alienos.h  debug.h  display.h
src/: debug.c  display.c  main.c
